# initializer-statnlp-service-cpp

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/model/: message.cpp
app/static/: swagger.json
ui/: README.md  main.cpp
ui/assets/: swagger.json
ui/include/: rapidjson.h
ui/model/: message.cpp
ui/service/: messageservice.cpp
ui/views/: index.html
